storage/indexeddb/modern/leaks-1.html leaks the database connection handle. https://bugs.webkit.org/show_bug.cgi?id=158643

Reviewed by Alex Christensen.

Source/WebCore:

Tested by changes to existing test.

* Modules/indexeddb/IDBDatabase.cpp:
(WebCore::IDBDatabase::hasPendingActivity):

* dom/EventTarget.h:
(WebCore::EventTarget::eventTargetData):
(WebCore::EventTarget::hasEventListeners):

LayoutTests:

* storage/indexeddb/modern/leak-1-expected.txt:
* storage/indexeddb/modern/resources/leak-1.js:


Canonical link: https://commits.webkit.org/176798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202019 268f45cc-cd09-0410-ab3c-d52691b4dbfc