Source/WebCore/dom/EventTarget.h
@@ -158,7 +158,7 @@ public:
     EventListener* getAttributeEventListener(const AtomicString& eventType);
 
     bool hasEventListeners() const;
-    bool hasEventListeners(const AtomicString& eventType);
+    bool hasEventListeners(const AtomicString& eventType) const;
     bool hasCapturingEventListeners(const AtomicString& eventType);
     bool hasActiveEventListeners(const AtomicString& eventType) const;
     const EventListenerVector& getEventListeners(const AtomicString& eventType);
@@ -176,6 +176,10 @@ protected:
     
     virtual EventTargetData* eventTargetData() = 0;
     virtual EventTargetData& ensureEventTargetData() = 0;
+    const EventTargetData* eventTargetData() const
+    {
+        return const_cast<EventTarget*>(this)->eventTargetData();
+    }
 
 private:
     virtual void refEventTarget() = 0;
@@ -217,9 +221,9 @@ inline bool EventTarget::hasEventListeners() const
     return !d->eventListenerMap.isEmpty();
 }
 
-inline bool EventTarget::hasEventListeners(const AtomicString& eventType)
+inline bool EventTarget::hasEventListeners(const AtomicString& eventType) const
 {
-    EventTargetData* d = eventTargetData();
+    const EventTargetData* d = eventTargetData();
     if (!d)
         return false;
     return d->eventListenerMap.contains(eventType);
